--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign-Up Form</title>
     <link rel="stylesheet" href="styles.css"></link>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div id="container">
@@ -28,24 +29,26 @@
                     <div class="input-field">
                         <div>
                             <label for="first_name">FIRST NAME</label><br/>
-                            <input type="text" name="first_name" id="first_name"><br/>
+                            <input type="text" name="first_name" id="first_name" required><br/>
                             <label for="email">EMAIL</label><br/>
-                            <input type="text" name="email" id="email"><br/>
+                            <input type="email" name="email" id="email" required><br/>
                             <label for="first_name">PASSWORD</label><br/>
-                            <input type="text" name="password" id="password"><br/>
+                            <input type="text" name="password" id="password" minlength="8" required onchange="PassCheck();"><br/>
+                            <span id="password_text"> </span>
                         </div>
                         <div>
                             <label for="last_name">LAST NAME</label><br/>
                             <input type="text" name="last_name" id="last_name"><br/>
                             <label for="phone_number">PHONE NUMBER</label><br/>
-                            <input type="text" name="phone_number" id="phone_number"><br/>
+                            <input type="number" name="phone_number" id="phone_number"><br/>
                             <label for="first_name">CONFIRM PASSWORD</label><br/>
-                            <input type="text" name="confirm_password" id="confirm_password"><br/>
+                            <input type="text" name="confirm_password" id="confirm_password" minlength="8" required onchange="PassCheck();"><br/>
+                            <span id="confirm_text"> </span>
                         </div>
                     </div>
                     <div class="footer">
-                        <button>Create Account</button>
-                        <p>Already have an account? Log in</p>
+                        <button id ="submit" type="submit" onchange="PassCheck();">Create Account</button>
+                        <p>Already have an account? <a href="">Log in</a></p>
                     </div>
                 </form>
             </div>
